--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
         <label>Financial Stress (1–5):</label>
         <input type="number" name="finance" min="1" max="5" required="required"><br><br>
 
-        <label>Pressure (1–5):</label>
+        <label> Study/job Pressure (1–5):</label>
         <input type="number" name="pressure" min="1" max="5" required="required"><br><br>
 
         <label>Study/Job Satisfaction (1–5):</label>
