--- a/static/style.css
+++ b/static/style.css
@@ -1,31 +1,34 @@
 /* General body styling */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f8ff;
+*{
     margin: 0;
     padding: 0;
+}
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f9f9f9;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    height: 100vh;
 }
 
 /* Form container */
 form {
-    margin-top: 2%;
     background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    padding: 20px 30px;
-    width: 400px;
+    padding: 10px 0px 10px 20px;
+    width: 350px;
     text-align: left;
+    margin:10px 0px;
 }
 
 /* Form heading */
 h1 {
     text-align: center;
     color: #333333;
-    margin-top: 40px;
+    margin-top: 10px;
 }
 
 /* Labels and inputs in a row */
@@ -33,11 +36,11 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 10px; /* Reduced spacing between rows */
+    margin-bottom: 0px; /* Reduced spacing between rows */
 }
 
 label {
-    font-size: 14px;
+    font-size: 13px;
     color: #333333;
     margin-right: 10px; /* Space between label and input */
     flex: 1; /* Allow label to take up space */
@@ -45,7 +48,7 @@ label {
 
 input[type="number"], select {
     flex: 2; /* Allow input to take up more space */
-    padding: 8px;
+    padding: 6px;
     border: 1px solid #cccccc;
     border-radius: 5px;
     box-sizing: border-box;
@@ -55,11 +58,11 @@ input[type="number"], select {
 input[type="submit"] {
     background-color: #4caf50;
     color: white;
-    padding: 10px 15px;
+    padding: 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 15px;
     width: 50%;
     margin-top: 10px;
     margin-left: 25%; 
@@ -75,12 +78,4 @@ h2 {
     text-align: center;
     color: #4caf50;
     margin-bottom: 10px;
-}
-
-/* Responsive design */
-@media (max-width: 500px) {
-    form {
-        width: 90%;
-        padding: 15px;
-    }
 }
