--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mental Health Prediction</title>
     <link rel="stylesheet" href="../static/style.css">
-    
+    <link rel="stylesheet" href="../static/footer.css">
 </head>
 <body>
 
@@ -55,4 +55,19 @@
     {% endif %}
 
 </body>
+<footer>
+    <div class="footer-container">
+        <!-- Social Icons First -->
+        <div class="social-icons">
+            <a href="https://github.com/rakesh-myana/mental-health-predictor" target="_blank"><img src="../static/images/github.svg" alt="GitHub"></a>
+            <a href="https://www.linkedin.com/in/rakesh-myana" target="_blank"><img src="../static/images/linkedin.svg"
+                    alt="LinkedIn"></a>
+        </div>
+
+
+        <!-- Copyright Text -->
+        <p>&copy; 2025 Rakesh Myana. All rights reserved.</p>
+    </div>
+</footer>
+
 </html>
